--- a/bountifulFoods/css/small.css
+++ b/bountifulFoods/css/small.css
@@ -16,15 +16,15 @@ body {
 }
 
 header {
-    margin: 30px 20px;
+    margin-bottom: 20px;
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
     background-color: #40916c;
 }
 
 .businessLogo {
-    grid-column: 1/2;
+    grid-column: 2/3;
     grid-row: 1/2;
     justify-self: center;
     align-self: center;
@@ -33,16 +33,16 @@ header {
 
 .companyName {
     grid-column: 2/3;
-    grid-row: 1/2;
+    grid-row: 2/3;
     color: white;
     font-size: 28px;
-    justify-self: left;
+    justify-self: center;
     align-self: center;
 }
 
 nav {
-    grid-column: 1/3;
-    grid-row: 2/3;
+    grid-column: 1/4;
+    grid-row: 3/4;
     align-self: center;
     justify-self: center;
     margin-bottom: 15px;
@@ -58,9 +58,9 @@ nav ul li a {
     display: block;
     padding: .8rem 2vw;
     text-decoration: none;
-    border-top: 1px solid rgb(0, 0, 0);
     font-size: 24px;
     color: white;
+    border-bottom: 2px solid white;
 }
 
 nav ul li.active a {
@@ -83,11 +83,15 @@ nav ul.open {
 #hamburgerBtn {
     color: white;
     background-color: #40916c;
-    border: none;
+    border: solid 1px white;
+    grid-column: 3/4;
+    grid-row: 1/2;
+    margin: 5px;
+    padding: 0;
 }
 
 #hamburgerBtn span {
-    font-size: 30px;
+    font-size: 24px;
 }
 
 #hamburgerBtn span:nth-child(1) {
@@ -104,8 +108,6 @@ nav ul.open {
 
 #hamburgerBtn.open span:nth-child(2) {
     display: block;
-    margin-left: 50px;
-    margin-bottom: 5px;
 }
 
 .indexMain {
@@ -161,6 +163,12 @@ div {
 
 .numOfDrinks {
     text-align: center;
+}
+
+.drinkAmount {
+    font-size: 32px;
+    text-decoration: solid;
+    margin: 10px;
 }
 
 .weatherCard {
@@ -354,7 +362,7 @@ fieldset.fruitSelect label input {
 .aboutMain {
     display: grid;
     grid-template-columns: repeat(1, auto);
-    grid-template-rows: repeat(9, auto);
+    grid-template-rows: repeat(11, auto);
 }
 
 .contactHeader {
@@ -390,72 +398,39 @@ fieldset.fruitSelect label input {
 .historicalInfo {
     grid-column: 1/2;
     grid-row: 6/7;
-    text-align: center;
+    margin: 10px;
 }
 
-.locationHeader {
+.aboutUsHeader {
     grid-column: 1/2;
     grid-row: 7/8;
     text-align: center;
 }
 
-iframe.googleMap {
+.aboutUsInfo {
     grid-column: 1/2;
     grid-row: 8/9;
+    margin: 10px;
+}
+
+.locationHeader {
+    grid-column: 1/2;
+    grid-row: 10/11;
+    text-align: center;
+}
+
+.googleMap {
+    grid-column: 1/2;
+    grid-row: 11/12;
     justify-self: center;
-    margin: 20px;
+    margin: 5px;
     width: 90%;
     height: 100%;
     
 }
 
-.formHeader {
-    grid-column: 1/2;
-    grid-row: 9/10;
+iframe {
+    width: 100%;
+    height: 100%;
     text-align: center;
-    padding-top: 20px;
-}
-
-.contactForm {
-    grid-column: 1/2;
-    grid-row: 10/11;
-    margin: 0 10px;
-
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-}
-
-form fieldset {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    background-color: #95d5b2;
-}
-
-form label input {
-    width: 98%;
-    padding: 10px 5px;
-}
-
-form label textarea {
-    width: 98%;
-    padding: 20px 5px;
-}
-
-input.submitBtn {
-    grid-column: 1/2;
-    grid-row: 2/3;
-
-    text-align: center;
-    margin: 10px 50px;
-    padding: 10px;
-    font-size: 24px;
-    font-family: 'Solway', serif, sans-serif;
-
-    background-color: #52b788;
-}
-
-input.submitBtn:hover {
-    background-color: #40916c;
-    color: white;
 }
